--- a/mypage.html
+++ b/mypage.html
@@ -23,6 +23,10 @@ $result = $db->getUser($_SESSION['login_id']);
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.4/dist/trix.css">
+    <link rel="stylesheet" href="css/trix_overwrite.css">
+    <script type="text/javascript" src="https://unpkg.com/trix@2.0.4/dist/trix.umd.min.js"></script>
+
     <title>プチコン３号作品倉庫</title>
 </head>
 
@@ -48,7 +52,9 @@ $result = $db->getUser($_SESSION['login_id']);
                         </div>
                         <div>
                             <p>概要</p>
-                            <textarea name="description" cols="35" rows="10" placeholder="自己紹介などを書いてみましょう"><?php echo $result['user_description'] ?></textarea>
+                            <input id="desc" type="hidden" name="description" value="<?php echo $result['user_description'] ?>">
+                            <trix-editor input="desc" class="trix-content" placeholder="自己紹介などを書いてみましょう"></trix-editor>
+                            <!-- <textarea name="description" cols="35" rows="10" placeholder="自己紹介などを書いてみましょう"><?php echo $result['user_description'] ?></textarea> -->
                         </div>
                         <div>
                             <input type="submit" value="変更">
