--- a/signup.html
+++ b/signup.html
@@ -40,9 +40,9 @@ $db = new DBManager();
                     <h2>どうしても匿名がいいな...</h2>
                     <p>
                         こちらで用意した「名無しさん」というアカウントがありますのでそちらにログインして投稿してください。
-                        ただし悪意を持った第三者にこのアカウントで投稿した記事が荒らされる可能性があることにご留意ください。
-                        （基本的にバックアップを取っていないので復元することができません。）
-                        またこのアカウントではリアクションが送れません。
+                        <!-- ただし悪意を持った第三者にこのアカウントで投稿した記事が荒らされる可能性があることにご留意ください。 -->
+                        <!-- （基本的にバックアップを取っていないので復元することができません。） -->
+                        またこのアカウントでは投稿記事の編集・削除およびリアクションが送れません。
                     </p>
                     <p>
                         メールアドレス：(空欄)<br />
