--- a/readme.html
+++ b/readme.html
@@ -76,6 +76,9 @@ $db = new DBManager();
                     <details>
                         <summary>Trix 2.0.4</summary>
                         <p>
+                            MIT License
+                        </p>
+                        <p>
                             Copyright (c) 2022 37signals, LLC
                         </p>
                         <p>
@@ -86,10 +89,12 @@ $db = new DBManager();
                             distribute, sublicense, and/or sell copies of the Software, and to
                             permit persons to whom the Software is furnished to do so, subject to
                             the following conditions:
-    
+                        </p>
+                        <p>
                             The above copyright notice and this permission notice shall be
                             included in all copies or substantial portions of the Software.
-    
+                        </p>
+                        <p>
                             THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
                             EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
                             MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
