--- a/login.html
+++ b/login.html
@@ -34,11 +34,11 @@ $db = new DBManager();
                     <a href="signup.html">新規ユーザ登録はこちら</a>
                     <form id="form" action="./php/login.php" method="post">
                         <div>
-                            <p class="required">メールアドレス</p>
+                            <p>メールアドレス</p>
                             <input type="email" name="mail">
                         </div>
                         <div>
-                            <p class="required">パスワード</p>
+                            <p>パスワード</p>
                             <input type="password" name="pass">
                         </div>
                         <div>
