--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@ $edit = false;
 if (isset($_SESSION['login_id']) && $_SESSION['login_auth'] != 0) {
     $reped = $db->getUserPrjRep($_GET['id'],$_SESSION['login_id']);
     $userid = $_SESSION['login_id'];
-    if ($_SESSION['login_id'] == $result['user_id']) $edit = true;
+    if ($_SESSION['login_id'] == $result['user_id'] || $_SESSION['login_auth'] == 10) $edit = true;
 } else {
     $reped = [
                 "good" => "disabled",
