--- a/writing.html
+++ b/writing.html
@@ -45,14 +45,14 @@ $db->OutPutlog();
                         </div>
                         <div>
                             <p class="required">作品名</p>
-                            <input type="text" name="projectname">
+                            <input type="text" name="projectname" required>
                         </div>
                         <div>
                             <p class="required">公開キー</p>
-                            <input type="text" name="projectpk" placeholder="A12BC3D">
+                            <input type="text" name="projectpk" placeholder="A12BC3D" required>
                         </div>
                         <div>
-                            <p class="required">概要</p>
+                            <p>概要</p>
                             <!-- <textarea name="projectdesc" id="" cols="35" rows="10"
                                 placeholder="<h3>操作方法</h3>"></textarea> -->
                             <input id="desc" type="hidden" name="projectdesc">
