--- a/edit.html
+++ b/edit.html
@@ -8,7 +8,7 @@ $db = new DBManager();
 
 if ($_SERVER['REQUEST_METHOD'] == "POST") {
     $data = $db->getProject($_POST['projectid']);
-    if ($data['user_id'] != $_SESSION['login_id']) header("Location: ./index.html");
+    if ($data['user_id'] != $_SESSION['login_id'] && $_SESSION['login_auth'] != 10) header("Location: ./index.html");
 }
 ?>
 <!DOCTYPE html>
@@ -54,19 +54,19 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
                                 ?>
                             </div>
                             <input type="file" name="projectimg[]" accept="image/png, image/jpeg" multiple>
-                            4枚まで送付することができます。(.png.jpg)
+                            現在送付されている画像と合わせて4枚まで送付することができます。(.png.jpg)
                         </div>
                         <div>
                             <p class="required">作品名</p>
-                            <input type="text" name="projectname" value="<?php echo $data['project_name'] ?>">
+                            <input type="text" name="projectname" value="<?php echo $data['project_name'] ?>" required>
                         </div>
                         <div>
                             <p class="required">公開キー</p>
                             <input type="text" name="projectpk" placeholder="A12BC3D"
-                                value="<?php echo $data['project_pk'] ?>">
+                                value="<?php echo $data['project_pk'] ?>" required>
                         </div>
                         <div>
-                            <p class="required">概要</p>
+                            <p>概要</p>
                             <input id="desc" type="hidden" name="projectdesc" value="<?php echo $data['project_description'] ?>">
                             <trix-editor input="desc" class="trix-content"></trix-editor>
                         </div>
